Fix generator defects, make generation reproducible, align version and docs
Bug fixes:
- numberOfBitsSet never counted bit 63 (ASCII '?' / DEL), corrupting the
  cardinality sort key of the ASCII state partitioning, in both
  LexerGenerator and DfaBuilder; replaced by Long.bitCount.
- Nfa.generateNfaStartStates: the catch around Vector.clone() could not
  fire and left oldStates null; replaced by a plain ArrayList copy.
- Nfa.calcNfaStartStatesCode was a no-op (condGenerated never became
  true); removed with its call.
- ASTWriter.println indented every line by exactly one level regardless
  of depth; now depth-driven, with a regression test.
- The Rust back end has no DEPTH_LIMIT support but emitted Java
  throw/try/++ into Rust; it now fails fast with a GenerationException
  (SPECIFICATION.md 3), with a test.
- The misspelt, never-read KEEP_LINE_COOL template variable is removed;
  the Java, C++ and Rust lexer templates use KEEP_LINE_COLUMN.
  GeneratedCodeCompilesTest pins the option to behaviour.
- A choice whose middle alternative matches the empty sequence, after one
  that opens a switch, crashed generation with a NullPointerException:
  ParserBuilder filed the switch's default mask under the last condition,
  the generator looked it up under the one the lookahead loop stopped at.
- An unlabelled TOKEN that is not a string literal got no entry in the
  token-image table: Java and Rust emitted an empty initializer element
  (does not compile), C++ an empty image, and every later index was off by
  one. The "consider a label" warning moves to the lexer stage
  (LexerBuilder), so C++ no longer reports it twice.
- Tree building for Rust died with "Invalid template name: .../MultiNode.rs";
  the node, visitor and default-visitor templates were unported Java
  leftovers and are removed. Rust now rejects exactly the two cases that
  have no templates, VISITOR and node classes (NODE_MULTI with
  BUILD_NODE_FILES), with a GenerationException that names the option
  (R